// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoData component tests snapshot tests with location object 1`] = `
<Fragment>
  <PageSection
    data-ouia-component-type="no-data"
    data-ouia-safe={true}
    isFilled={true}
  >
    <Bullseye>
      <EmptyState
        variant="full"
      >
        <EmptyStateIcon
          icon={[Function]}
        />
        <Title
          headingLevel="h1"
          size="4xl"
        >
          No matches
        </Title>
        <EmptyStateBody>
          No data to display
        </EmptyStateBody>
        <Button
          onClick={[Function]}
          variant="primary"
        />
      </EmptyState>
    </Bullseye>
  </PageSection>
</Fragment>
`;

exports[`NoData component tests snapshot tests without location object 1`] = `
<Fragment>
  <PageSection
    data-ouia-component-type="no-data"
    data-ouia-safe={true}
    isFilled={true}
  >
    <Bullseye>
      <EmptyState
        variant="full"
      >
        <EmptyStateIcon
          icon={[Function]}
        />
        <Title
          headingLevel="h1"
          size="4xl"
        >
          NoData
        </Title>
        <EmptyStateBody>
          some description
        </EmptyStateBody>
        <Button
          onClick={[Function]}
          variant="primary"
        >
          button
        </Button>
      </EmptyState>
    </Bullseye>
  </PageSection>
</Fragment>
`;
